--- a/catconnect/templates/base2.html
+++ b/catconnect/templates/base2.html
@@ -1,3 +1,5 @@
+<!-- This html file contains the styling of the webpages particularly the navigation bar. -->
+
 <!doctype html>
 <html lang="en">
 <head>
