--- a/catconnect/templates/cat_info.html
+++ b/catconnect/templates/cat_info.html
@@ -1,3 +1,7 @@
+<!-- This html file shows the cat profile of a selected record. It includes the
+name, breed, age, description, and photo of the cat as well as the adoption
+button for interested adopters. -->
+
 {% extends 'base2.html' %}
 
 {% block style %}
