--- a/catconnect/templates/cat_list2.html
+++ b/catconnect/templates/cat_list2.html
@@ -1,3 +1,6 @@
+<!-- This html file contains the actions allowed for each record such as
+to edit and delete the record as well as to see more information of the record. -->
+
 {% extends 'base2.html' %}
 
 {% block style %}
