--- a/catconnect/templates/edit_cat.html
+++ b/catconnect/templates/edit_cat.html
@@ -1,3 +1,6 @@
+<!-- This html file displays the form needed to be filled out to
+change or update the information of an existing record in the database-->
+
 {% extends 'base2.html' %}
 
 {% block style %}
