--- a/catconnect/templates/index.html
+++ b/catconnect/templates/index.html
@@ -1,3 +1,5 @@
+<!-- This html file shows the information included in every record or cat profile. -->
+
 {% extends 'base2.html' %}
 
 {% block title %} {% endblock %}
