--- a/catconnect/templates/testform.html
+++ b/catconnect/templates/testform.html
@@ -1,3 +1,6 @@
+<!-- This html file presents the form needed to be filled out to add a
+record of cat profile in the database. -->
+
 {% extends 'base2.html' %}
 
 {% block style %}
