--- a/catconnect/templates/add_cat.html
+++ b/catconnect/templates/add_cat.html
@@ -1,3 +1,5 @@
+<!-- This html file presents the functionality to add a record of cat profile in the database. -->
+
 {% extends 'base2.html' %}
 
 {% block style %}
